# CpprojectWithLua

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile
cmake/: GoogleTest.cmake  LuaLibrary.cmake
src/: CMakeLists.txt  error_values.h  main.c
src/cmake_generator/: CMakeLists.txt  cmake_document_engine.c  cmake_document_engine.h  cmake_generator.c  cmake_generator.h  cmake_target.c  cmake_target.h  cmake_types.h
tests/: CMakeLists.txt  cmake_document_engine_tests.cpp  cmake_generator_tests.cpp  cmake_generator_tests.h
